added SoundEffectBook and SoundEffectCollector optimized sound codec, playing recording and component Data